discussion/kv_engine/174671/174671_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'neo'

* neo:
  MB-51413: Return ReadVBStateResult from snapshot magma readVBState

Change-Id: I0c3f9b02a4ba81e028d1ec77a7f21895f5b860b6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-05-10 10:19:32.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-10 10:33:38.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38662/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38662/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19498/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19498/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27557/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27557/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20182/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20182/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7007/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7007/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19155/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19155/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46034/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(1951): error C2228: left of ".IsOK" must have class/struct/union ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46034/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17395/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3: error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
  static_assert(
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1853:23: note: in instantiation of function template specialization "fmt::v8::detail::make_arg<true, fmt::v8::basic_format_context<fmt::v8::appender, char>, fmt::v8::detail::type::custom_type, KVStoreIface::ReadVBStateStatus &, 0>" requested here
        data_{detail::make_arg<
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1872:10: note: in instantiation of function template specialization "fmt::v8::format_arg_store<fmt::v8::basic_format_context<fmt::v8::appender, char>, Vbid, KVStoreIface::ReadVBStateStatus>::format_arg_store<Vbid &, KVStoreIface::ReadVBStateStatus &>" requested here
  return {std::forward<Args>(args)...};
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:3119:28: note: in instantiation of function template specialization "fmt::v8::make_format_args<fmt::v8::basic_format_context<fmt::v8::appender, char>, Vbid &, KVStoreIface::ReadVBStateStatus &>" requested here
  return vformat(fmt, fmt::make_format_args(args...));
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1953:22: note: in instantiation of function template specialization "fmt::v8::format<Vbid &, KVStoreIface::ReadVBStateStatus &>" requested here
                fmt::format("MagmaKVStore::getPersistedVBucketState(handle) {} "
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1951:22: error: member reference base type "KVStoreIface::ReadVBStateStatus" is not a structure or union [clang-diagnostic-error]
    if (!state.status.IsOK()) {
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1958:18: error: no member named "vbstate" in "KVStoreIface::ReadVBStateResult"; did you mean "state"? [clang-diagnostic-error]
    return state.vbstate;
                 ^~~~~~~
                 state
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:352:23: note: "state" declared here
        vbucket_state state;
                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17395/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3:
error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17395/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7099/ : FAILURE

Compile error at [2022-05-10T10:24:46.449Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1951:23:
error: request for member ?IsOK? in ?state.KVStoreIface::ReadVBStateResult::status?, which is of non-class type ?KVStoreIface::ReadVBStateStatus?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7099/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18349/ : FAILURE

Compile error at [2022-05-10T10:24:14.128Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1951:22:
error: member reference base type "KVStoreIface::ReadVBStateStatus" is not a structure or union
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18349/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16402/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
